--- a/core.yml
+++ b/core.yml
@@ -50,3 +50,10 @@ knife4j:
   enable: true
   setting:
     language: zh-CN
+
+server:
+  servlet:
+    encoding:
+      enabled: true
+      charset: UTF-8
+      force: true
