--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>cn.com.cgh</groupId>
-            <artifactId>romantic</artifactId>
+            <artifactId>romanticApi</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
