--- a/core.yml
+++ b/core.yml
@@ -18,7 +18,7 @@ spring:
           max-wait: 10000
           min-idle: 10
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cgh1?useUnicode=true&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
+    url: jdbc:mysql://127.0.0.1:3306/cgh1?useUnicode=true&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true&useServerPrepStmts=false&cachePrepStmts=true
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
