--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,6 +18,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>cn.com.cgh</groupId>
+            <artifactId>gallery</artifactId>
+        </dependency>
         <!--   loadbalancer     -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
