--- a/login/pom.xml
+++ b/login/pom.xml
@@ -23,7 +23,11 @@
         </dependency>
         <dependency>
             <groupId>cn.com.cgh</groupId>
-            <artifactId>romantic</artifactId>
+            <artifactId>gallery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.com.cgh</groupId>
+            <artifactId>romanticApi</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
