--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>login</module>
         <module>jena</module>
         <module>auth</module>
-        <module>romantic</module>
+        <module>romanticApi</module>
     </modules>
 
     <properties>
@@ -101,7 +101,12 @@
             </dependency>
             <dependency>
                 <groupId>cn.com.cgh</groupId>
-                <artifactId>romantic</artifactId>
+                <artifactId>romanticApi</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.com.cgh</groupId>
+                <artifactId>gallery</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
