--- a/romanticApi/pom.xml
+++ b/romanticApi/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>romantic</artifactId>
+    <artifactId>romanticApi</artifactId>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -27,11 +27,6 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.com.cgh</groupId>
-            <artifactId>core</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>cn.com.cgh</groupId>
