--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 
 ## cacheManager 配置
-#spring.cache.cache-names=login,user,core,gateway
+#spring.cache.cache-names=resource,user,core,gateway
 #spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
 #spring.cache.type=caffeine
 #spring.cloud.util.enabled=true
