--- a/romanticApi/src/main/resources/bootstrap.properties
+++ b/romanticApi/src/main/resources/bootstrap.properties
@@ -7,3 +7,6 @@ spring.cloud.openfeign.client.config.default.connect-timeout=2000
 spring.cloud.openfeign.client.config.default.read-timeout=2000
 spring.cloud.openfeign.okhttp.enabled=true
 feign.sentinel.enabled=true
+
+mybatis-plus.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
