--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>gateway</module>
         <module>gallery</module>
         <module>core</module>
-        <module>login</module>
+        <module>resource</module>
         <module>jena</module>
         <module>auth</module>
         <module>romanticApi</module>
