--- a/core.yml
+++ b/core.yml
@@ -18,10 +18,44 @@ spring:
           max-wait: 10000
           min-idle: 10
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cgh1?useUnicode=true&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true&useServerPrepStmts=false&cachePrepStmts=true
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    master:
+      type: com.zaxxer.hikari.HikariDataSource
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://127.0.0.1:3306/cgh1?useUnicode=true&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
+      username: root
+      password: 123456
+      hikari:
+        #连接池中允许的最大连接数
+        maximum-pool-size: 15
+        #<!-- 生效超时 -->
+        validation-timeout: 3000
+        #连接只读数据库时配置为true， 保证安全
+        read-only: false
+        #等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException
+        connection-timeout: 60000
+        #一个连接idle状态的最大时长（毫秒），超时则被释放（retired）
+        idle-timeout: 60000
+        # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒，参考MySQLwait_timeout参数（show variables like '%timeout%';）
+        max-lifetime: 120000
+    slave1:
+      type: com.zaxxer.hikari.HikariDataSource
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://127.0.0.1:3306/cgh2?useUnicode=true&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
+      username: root
+      password: 123456
+      hikari:
+        #连接池中允许的最大连接数
+        maximum-pool-size: 15
+        #<!-- 生效超时 -->
+        validation-timeout: 3000
+        #连接只读数据库时配置为true， 保证安全
+        read-only: false
+        #等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException
+        connection-timeout: 60000
+        #一个连接idle状态的最大时长（毫秒），超时则被释放（retired）
+        idle-timeout: 60000
+        # 一个连接的生命时长（毫秒），超时而且没被使用则被释放（retired），缺省:30分钟，建议设置比数据库超时时长少30秒，参考MySQLwait_timeout参数（show variables like '%timeout%';）
+        max-lifetime: 120000
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
