--- a/gateway/src/main/resources/bootstrap-dev.yml
+++ b/gateway/src/main/resources/bootstrap-dev.yml
@@ -1,10 +1,10 @@
 server:
   port: 9001
-  servlet:
-    context-path: way
+#  servlet:
+#    context-path: way
 spring:
-  application:
-    name: way
+#  application:
+#    name: gateway
   main:
     web-application-type: reactive
   cloud:
