--- a/resource/src/main/resources/bootstrap.yml
+++ b/resource/src/main/resources/bootstrap.yml
@@ -1,10 +1,5 @@
 spring:
   profiles:
     active: dev
-
-log:
-  level:
-    - name: 'cn.com.cgh.login'
-      level: info
-    - name: 'cn.com.cgh.gateway'
-      level: info
+  application:
+    name: resource
