--- a/core.yml
+++ b/core.yml
@@ -17,6 +17,11 @@ spring:
           max-idle: 100
           max-wait: 10000
           min-idle: 10
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   datasource:
     master:
       type: com.zaxxer.hikari.HikariDataSource
