--- a/core.yml
+++ b/core.yml
@@ -22,6 +22,7 @@ spring:
     port: 5672
     username: guest
     password: guest
+    virtual-host: /
   datasource:
     master:
       type: com.zaxxer.hikari.HikariDataSource
