--- a/romanticApi/src/main/resources/bootstrap.properties
+++ b/romanticApi/src/main/resources/bootstrap.properties
@@ -6,3 +6,8 @@ spring.cloud.openfeign.client.config.default.logger-level=basic
 spring.cloud.openfeign.client.config.default.connect-timeout=2000
 spring.cloud.openfeign.client.config.default.read-timeout=2000
 spring.cloud.openfeign.okhttp.enabled=true
+
+# 核心配置。
+spring.cloud.nacos.config.extension-configs[0].data-id=core.yml
+spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
+spring.cloud.nacos.config.extension-configs[0].refresh=true
