--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <spring.oauth2.version>2.2.5.RELEASE</spring.oauth2.version>
         <security.oauth2.version>2.5.2.RELEASE</security.oauth2.version>
         <nacos.version>2022.0.0.0</nacos.version>
+        <jjwt.version>0.12.3</jjwt.version>
     </properties>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -110,6 +111,13 @@
                 <artifactId>gallery</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
