--- a/oasis/src/main/resources/bootstrap.yml
+++ b/oasis/src/main/resources/bootstrap.yml
@@ -1,9 +1,7 @@
 spring:
   profiles:
     active: dev
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
-    virtual-host: cghHost
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
