--- a/romanticApi/src/main/resources/bootstrap.properties
+++ b/romanticApi/src/main/resources/bootstrap.properties
@@ -11,3 +11,5 @@ spring.cloud.openfeign.okhttp.enabled=true
 spring.cloud.nacos.config.extension-configs[0].data-id=core.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
+
+spring.cloud.openfeign.httpclient=
