--- a/core.yml
+++ b/core.yml
@@ -103,6 +103,18 @@ knife4j:
   setting:
     language: zh-CN
 
+feign:
+  httpclient:
+    enabled: true
+    # 最大连接数，默认：200
+    max-connections: 200
+    # 最大路由，默认：50
+    max-connections-per-route: 50
+    # 连接超时，默认：2000/毫秒
+    connection-timeout: 2000
+    # 生存时间，默认：900L
+    time-to-live: 900
+    
 server:
   servlet:
     encoding:
