--- a/gateway/src/main/resources/bootstrap-dev.yml
+++ b/gateway/src/main/resources/bootstrap-dev.yml
@@ -1,23 +1,20 @@
 server:
   port: 9001
-#  servlet:
-#    context-path: way
 spring:
-#  application:
-#    name: gateway
   main:
     web-application-type: reactive
   cloud:
     nacos:
       config:
         namespace: public
-        server-addr: 127.0.0.1:8848
+        server-addr: ${spring.cloud.nacos.server-addr}
         file-extension: yaml
       discovery:
         namespace: public
-        server-addr: 127.0.0.1:8848
+        server-addr: ${spring.cloud.nacos.server-addr}
       username: nacos
       password: nacos
+      server-addr: 127.0.0.1:8848
 
 knife4j:
   # 聚合swagger文档
