--- a/core/pom.xml
+++ b/core/pom.xml
@@ -88,10 +88,10 @@
 <!--            <groupId>com.alibaba.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.tomcat.embed</groupId>-->
+<!--            <artifactId>tomcat-embed-core</artifactId>-->
+<!--        </dependency>-->
         <!--binder的依赖-->
 <!--        <dependency>-->
 <!--            <groupId>com.alibaba.cloud</groupId>-->
