--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <mybatis.velocity.version>2.3</mybatis.velocity.version>
         <p6spy.version>3.9.1</p6spy.version>
         <bcpkix.version>1.76</bcpkix.version>
+        <user.agent.utils.version>1.2.3</user.agent.utils.version>
 
         <mysql.version>8.2.0</mysql.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
@@ -115,7 +116,11 @@
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
                 <version>${nacos.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>user-agent-utils</groupId>
+                <artifactId>user-agent-utils</artifactId>
+                <version>${user.agent.utils.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
