--- a/resource/src/main/resources/bootstrap.yml
+++ b/resource/src/main/resources/bootstrap.yml
@@ -6,3 +6,7 @@ spring:
 feign:
   httpclient:
     enabled: true
+    
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
