--- a/core.yml
+++ b/core.yml
@@ -1,4 +1,13 @@
 spring:
+  task:
+    execution:
+      thread-name-prefix: custom-thread-
+      pool:
+        max-size: 20
+        queue-capacity: 100
+        core-size: 10
+        keep-alive: 10
+        allow-core-thread-time-out: true
   data:
     redis:
       sentinel:
