--- a/v3-admin-vite-main/.env
+++ b/v3-admin-vite-main/.env
@@ -4,4 +4,5 @@
 VITE_APP_TITLE=测试标题
 ## 项目水印内容
 VITE_APP_TITLE_=测试标题1
-ERROR_MESSAGE_ONE=系统异常请联系管理员。
+VITE_ERROR_MESSAGE_ONE=系统异常请联系管理员。
+VITE_ADMIN_USER=admin,1
