--- a/v3-admin-vite-main/.env
+++ b/v3-admin-vite-main/.env
@@ -6,3 +6,5 @@ VITE_APP_TITLE=测试标题
 VITE_APP_TITLE_=测试标题1
 VITE_ERROR_MESSAGE_ONE=系统异常请联系管理员。
 VITE_ADMIN_USER=admin,1
+VITE_CACHE_TYPE=session
+VITE_APP_PROJECT_NAME="v3-admin-vite"
